--- a/_config.yml
+++ b/_config.yml
@@ -21,6 +21,7 @@ baseurl: "/LearningJava" # the subpath of your site, e.g. /blog
 url: "https://itzg.github.io" # the base hostname & protocol for your site, e.g. http://example.com
 twitter_username: itzg
 github_username:  itzg
+google_analytics: UA-36572300-6
 
 # Build settings
 markdown: kramdown
